--- a/src/components/_examples/BlogArticle.html
+++ b/src/components/_examples/BlogArticle.html
@@ -233,7 +233,7 @@
                   </svg>
                   875
                   <span
-                    class="hs-tooltip-content hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-1 px-2 bg-gray-900 text-xs font-medium rounded shadow-sm dark:bg-black"
+                    class="hs-tooltip-ct hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-1 px-2 bg-gray-900 text-xs font-medium rounded shadow-sm dark:bg-black"
                     role="tooltip"
                   >
                     Like
@@ -268,7 +268,7 @@
                   </svg>
                   16
                   <span
-                    class="hs-tooltip-content hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-1 px-2 bg-gray-900 text-xs font-medium rounded shadow-sm dark:bg-black"
+                    class="hs-tooltip-ct hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-1 px-2 bg-gray-900 text-xs font-medium rounded shadow-sm dark:bg-black"
                     role="tooltip"
                   >
                     Comment
