--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,13 @@
 ---
 import Layout from '@layouts/Layout.astro';
-
+import { Debug } from 'astro:components';
 
 
 ---
 
 <Layout title="Home">
 
-	
+  <!-- <Debug {resp} /> -->
+
 
 </Layout>
