--- a/src/layouts/_elements/BaseHead.astro
+++ b/src/layouts/_elements/BaseHead.astro
@@ -13,6 +13,8 @@ const { title="(Title)", description = '(Description)', image='/favicon.svg' } =
 <meta name="description" content={description} />
 <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
 
+<ViewTransitions />
+
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
