--- a/src/layouts/_slots/GridAreaSlot.astro
+++ b/src/layouts/_slots/GridAreaSlot.astro
@@ -3,42 +3,41 @@
 
 ---
 
-<body class="grid-container m-auto h-screen w-screen">
 
-    <div class="item1">Header</div>
-    <div class="item2">Menu</div>
-    <div class="item3">Main</div>  
-    <div class="item4">Right</div>
-    <div class="item5">Footer</div>
-  
+<div class="p-page">
+  <div class="p-hd">  <slot name="p-hd" > (Header) </slot></div>
+	<div class="p-sd">    <slot name="p-sd" >(Side)</slot></div>	
+	<div class="p-ct"> <slot>(Content)</slot>        </div>
+	<div class="p-ad">      <slot name="p-ad" >(Ad)</slot></div>
+  <div class="p-ft">  <slot name="p-ft" >(Footer)</slot></div>
+</div>
+
 <style>
+  .p-hd { grid-area: hd;}
+  .p-sd {grid-area: sd;}
+  .p-ad {grid-area: ad;}
+  .p-ft {grid-area: ft;}
+  .p-ct {
+    grid-area: ct;
     
-  .item1 { grid-area: header; }
-  .item2 { grid-area: menu; }
-  .item3 { grid-area: main; }
-  .item4 { grid-area: right; }
-  .item5 { grid-area: footer; }
+  }
 
-
-  .grid-container {
+  .p-page {
     display: grid;
+    gap: 10px;
+    min-height:100%;
+    grid-auto-rows: auto 1fr auto;
+    grid-auto-columns: auto 1fr auto;
     grid-template-areas:
-    'header header header header header header'
-    'menu main main main right right'
-    'menu footer footer footer footer footer';
-    grid-gap: 10px;
-    background-color :#092834;
-    padding: 10px;
-    border: thin solid #F0F7D4 ;
-
+      "hd hd hd"
+      "sd ct ad"
+      "ft ft ad";
   }
 
-  .grid-container > div {
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    padding: 20px 0;
-    font-size: 30px;
-    border: thin solid #F0F7D4 ;
+  div {
+    border: thin solid var(--muted-border-color);
+    margin: 0 atuo;
+    padding: 2px;
+}
 
-  }
 </style>
