--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,21 +1,18 @@
 ---
+
 import Layout from '@layouts/Layout.astro';
-
 import Card from '@components/astro/Card.astro';
-
 import PreactCounter from '@components/preact/PreactCounter'
-import PreactCounter from '@components/preact/PreactForm'
 import IslandCounter from '@components/preact/IslandCounter'
 import Greeting from '@components/preact/Greeting';
 
-import Hamburger from '@components/astro/Hamburger.astro';
 import Form from "@components/astro/Form.astro"
-
+import { addResource, listResources } from "@scripts/resources.ts";
+import {type IResource} from "@scripts/resources.ts";
 import { signal } from '@preact/signals';
 
 const count = signal(0);
-import { addResource, listResources } from "@scripts/resources.ts";
-import {type IResource} from "@scripts/resources.ts";
+
 
 if (Astro.request.method === "POST") {
 	try {
@@ -40,11 +37,8 @@ const resources: IResource[] = await listResources();
 <Layout title="About">
 
 
-  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
-	<Form  />
-	<PreactCounter client:load />
+  <!-- <Greeting client:visible messages={["Hej", "Hallo", "Hola", "Habari"]} />
 
-	<Hamburger />
 	<IslandCounter client:visible > 
 			IslandCounter
 	</IslandCounter>
@@ -59,7 +53,7 @@ const resources: IResource[] = await listResources();
 
 	<PreactCounter count={count} client:visible >
 		Preact Components 2
-	</PreactCounter >
+	</PreactCounter > -->
 
 	<ul role="list" class="link-card-grid">
 		{resources.map((resource) => (
