--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -3,8 +3,10 @@
 import Layout from '@layouts/Layout.astro'
 import BlogPost from '@components/astro/BlogPost.astro';
 import { getCollection } from "astro:content";
+import { Debug } from 'astro:components'
 
-const allPosts = await getCollection("posts");
+const allPosts = await getCollection('blogs');
+
 
 const title = "My Blogs";
 
@@ -12,10 +14,13 @@ const title = "My Blogs";
 ---
 
 <Layout title={title}>
+
+  
   <p>在这里，我将分享我的学习 Astro 的之旅。</p>
   <ul>
-    {allPosts.map((post) =>
-      <BlogPost url={`/blogs/${post.slug}/`} title={post.data.title} />    )
+    {
+      allPosts.map((post) => 
+      <BlogPost url={ `blogs/${post.slug}` } title={post.data.title} /> )
     }
 
   </ul>
