--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -4,8 +4,9 @@ import { getCollection } from "astro:content";
 import Layout from "@layouts/Layout.astro";
 import BlogPost from "@components/astro/BlogPost.astro";
 
-const allPosts = await getCollection("posts");
-const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
+const allPosts = await Astro.glob('/src/content/posts/*.{md,mdx}');
+
+const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 
 
 const title = "Tag Index";
@@ -19,6 +20,7 @@ const title = "Tag Index";
     ))}
   </div>
 </Layout>
+
 <style>
   a {
     color: #00539F;
